fixed spacing and comparing to final file

--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,16 @@
 
-#main-navbar{
+#main-navbar {
     background-color: blue;
     overflow: hidden;
 } 
 
-#navbar-container{
+#navbar-container {
     float: left;
     width: 100%;
     position: relative;
 }
 
-#main-navbar ul{ 
+#main-navbar ul { 
     list-style-type: none;
     margin: 0;
     padding: 0; 
@@ -18,24 +18,24 @@
     left: 50%;
     float: left;
 }
-#main-navbar ul li{
+#main-navbar ul li {
     float: left;
     position: relative;
     right: 50%;
     display: block;
 }
-#main-navbar ul li a{
+#main-navbar ul li a {
     display: block;
     color: #fff;
     padding: 10px 20px;
     text-decoration: none;
 }
 
-#main-navbar ul li a:hover{
+#main-navbar ul li a:hover {
     background-color: #000;
 }
 
-#onpage{
+#onpage {
     text-decoration: underline overline;
 }
 
@@ -47,19 +47,19 @@
     width: 20%;
 }
 
-#sidebar ul{
+#sidebar ul {
     list-style-type: none;
     text-align: center;
     padding: 0;
 }
 
-#sidebar ul li{
+#sidebar ul li a {
     display: block; 
     padding: 15px 0;
     color: #fff;
     text-decoration: none;
 }
 
-#sidebar ul li:hover{
+#sidebar ul li a:hover {
     background-color: #000;
 }   
